--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	// Cloth Config API
+	maven { url "https://maven.shedaniel.me/" }
+
+	// Mod Menu
+	maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
@@ -31,6 +37,14 @@ dependencies {
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+
+	// Cloth Config API
+	modApi("me.shedaniel.cloth:cloth-config-fabric:13.0.121") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
+	// Mod Menu
+	modApi "com.terraformersmc:modmenu:9.0.0"
 }
 
 processResources {
