--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,15 @@ dependencies {
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
 	// Cloth Config API
-	modApi("me.shedaniel.cloth:cloth-config-fabric:13.0.121") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:11.1.118") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
 	// Mod Menu
-	modApi "com.terraformersmc:modmenu:9.0.0"
+	modApi "com.terraformersmc:modmenu:7.0.1"
+
+	// Mixin Extras
+	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.2")))
 }
 
 processResources {
