--- a/build.gradle
+++ b/build.gradle
@@ -39,19 +39,22 @@ dependencies {
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
 	// Cloth Config API
-	modApi("me.shedaniel.cloth:cloth-config-fabric:8.3.115") {
-		exclude(group: "net.fabricmc.fabric-api")
-	}
+	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
 
 	// Mod Menu
-	modApi "com.terraformersmc:modmenu:4.0.4"
+	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
 }
 
 processResources {
 	inputs.property "version", project.version
+	inputs.property "minecraft_version", project.minecraft_version
+	inputs.property "loader_version", project.loader_version
+	filteringCharset "UTF-8"
 
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand "version": project.version,
+				"minecraft_version": project.minecraft_version,
+				"loader_version": project.loader_version
 	}
 }
 
