--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
@@ -13,5 +12,12 @@ mod_version=0.2.2
 maven_group=net.yokohama_miyazawa.maidillager
 archives_base_name=maidillager
 
-# Dependencies
+#  Dependencies
+## Fabric Api
 fabric_version=0.58.0+1.19
+
+## Cloth Config Api
+cloth_config_version=8.3.115
+
+## Mod Menu
+mod_menu_version=4.0.4
