--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.15.3
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=0.2.3
+mod_version=0.1
 maven_group=net.yokohama_miyazawa.maidillager
 archives_base_name=maidillager
 
-# Dependencies
-fabric_version=0.83.0+1.20
+# Fabric API
+fabric_version=0.102.0+1.21
